// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal Transaction Transformer Tests should add back to sign in link with href when backToSigninUri is set in widget options 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "focus": true,
        "options": Object {
          "dataSe": "cancel",
          "href": "/",
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add back to signin element when transaction contains API error 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "focus": true,
        "options": Object {
          "dataSe": "cancel",
          "href": undefined,
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add back to signin link for tooManyRequests message key when baseUrl not provided 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "focus": true,
        "options": Object {
          "dataSe": "cancel",
          "href": "http://localhost:3000/",
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add return empty formbag when interaction code flow transaction 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add title and back to signin elements for link expired message key 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.email.return.link.expired.title",
        },
        "type": "Title",
      },
      Object {
        "focus": true,
        "options": Object {
          "dataSe": "cancel",
          "href": undefined,
          "isActionStep": true,
          "label": "goback",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add title and skip setup link for idx.error.server.safe.mode.enrollment.unavailable message key 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.safe.mode.title",
        },
        "type": "Title",
      },
      Object {
        "focus": true,
        "options": Object {
          "dataSe": "cancel",
          "isActionStep": false,
          "label": "oie.enroll.skip.setup",
          "step": "skip",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add title element with message for oie.selfservice.unlock_user.success.message message key 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "account.unlock.unlocked.title",
        },
        "type": "Title",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add title only for idx.error.server.safe.mode.enrollment.unavailable message key when intent is "CREDENTIAL_ENROLLMENT" 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.safe.mode.title",
        },
        "type": "Title",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add title when terminal key indicates to return to orig tab 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.consent.enduser.email.allow.title",
        },
        "type": "Title",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Terminal Transaction Transformer Tests should add try again link for idx.device.not.activated.consent.denied message key 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToValidate": Array [],
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "focus": true,
        "options": Object {
          "dataSe": "cancel",
          "href": "http://localhost:3000/",
          "isActionStep": true,
          "label": "oie.try.again",
          "step": "cancel",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
